--- a/0_PlotFigures/01_characteristic/02_summary_of_splitting_cells.ipynb
+++ b/0_PlotFigures/01_characteristic/02_summary_of_splitting_cells.ipynb
@@ -6,8 +6,8 @@
    "id": "9ed03e45",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-01-24T09:32:03.967767Z",
-     "start_time": "2024-01-24T09:32:03.263436Z"
+     "end_time": "2024-03-07T03:54:02.627952Z",
+     "start_time": "2024-03-07T03:54:00.866625Z"
     }
    },
    "outputs": [],
@@ -45,8 +45,8 @@
    "id": "da322557",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-01-23T09:32:36.175955Z",
-     "start_time": "2024-01-23T09:32:33.351854Z"
+     "end_time": "2024-03-07T03:46:33.278089Z",
+     "start_time": "2024-03-07T03:46:30.210226Z"
     }
    },
    "outputs": [
@@ -140,8 +140,8 @@
    "id": "759bf344",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-01-23T09:32:43.548972Z",
-     "start_time": "2024-01-23T09:32:41.720160Z"
+     "end_time": "2024-03-07T03:52:18.400502Z",
+     "start_time": "2024-03-07T03:52:16.372959Z"
     }
    },
    "outputs": [],
@@ -169,8 +169,8 @@
    "id": "bdda4ca0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-01-23T09:32:46.000952Z",
-     "start_time": "2024-01-23T09:32:43.551756Z"
+     "end_time": "2024-03-07T03:52:21.002670Z",
+     "start_time": "2024-03-07T03:52:18.404107Z"
     }
    },
    "outputs": [
@@ -245,8 +245,8 @@
    "id": "849d0943",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-01-23T09:32:49.274024Z",
-     "start_time": "2024-01-23T09:32:49.157922Z"
+     "end_time": "2024-03-07T03:52:43.785591Z",
+     "start_time": "2024-03-07T03:52:43.677974Z"
     }
    },
    "outputs": [
@@ -367,8 +367,8 @@
    "id": "f4ac2690",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-01-23T09:32:49.945189Z",
-     "start_time": "2024-01-23T09:32:49.484781Z"
+     "end_time": "2024-03-07T03:52:48.393583Z",
+     "start_time": "2024-03-07T03:52:47.940425Z"
     }
    },
    "outputs": [
@@ -407,17 +407,17 @@
    "id": "8b9bd0fe",
    "metadata": {},
    "source": [
-    "# Cell read number"
+    "# Reads of single-cell"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "a2b8ebf5",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-01-24T09:34:20.579352Z",
-     "start_time": "2024-01-24T09:34:19.144973Z"
+     "end_time": "2024-03-07T03:53:33.544270Z",
+     "start_time": "2024-03-07T03:53:31.961285Z"
     }
    },
    "outputs": [
@@ -435,7 +435,7 @@
     }
    ],
    "source": [
-    "path = \"../../1_NanoStrandSeq/results/demux/splitted/20220708_GM12878.reads.tsv\"\n",
+    "path = \"../../1_NanoStrandSeq/results/demux/splitted/20220708_GM12878/reads.tsv\"\n",
     "dat = pd.read_csv(path, sep=\"\\t\")\n",
     "dat = dat[dat[\"Cell\"] != \"unclassified\"]\n",
     "\n",
@@ -465,12 +465,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "87c2ef86",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-01-24T09:33:20.360180Z",
-     "start_time": "2024-01-24T09:33:12.169799Z"
+     "end_time": "2024-03-07T03:54:13.254353Z",
+     "start_time": "2024-03-07T03:54:05.112110Z"
     }
    },
    "outputs": [
@@ -550,7 +550,7 @@
    "source": [
     "for run in runs:\n",
     "    \n",
-    "    path = \"../../1_NanoStrandSeq/results/demux/splitted/%s.reads.tsv\" % run\n",
+    "    path = \"../../1_NanoStrandSeq/results/demux/splitted/%s/reads.tsv\" % run\n",
     "    dat = pd.read_csv(path, sep=\"\\t\")\n",
     "    dat = dat[dat[\"Cell\"] != \"unclassified\"]\n",
     "\n",
@@ -582,7 +582,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0ac4325d",
+   "id": "311f35fa",
    "metadata": {},
    "outputs": [],
    "source": []
