--- a/0_PlotFigures/01_characteristic/03_summary_of_trimming_reads.ipynb
+++ b/0_PlotFigures/01_characteristic/03_summary_of_trimming_reads.ipynb
@@ -6,8 +6,8 @@
    "id": "9ed03e45",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-01-23T10:18:37.651758Z",
-     "start_time": "2024-01-23T10:18:36.901781Z"
+     "end_time": "2024-03-07T03:54:55.716701Z",
+     "start_time": "2024-03-07T03:54:54.986021Z"
     }
    },
    "outputs": [],
@@ -33,19 +33,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "5dfbc0fe",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-01-23T10:18:45.657511Z",
-     "start_time": "2024-01-23T10:18:41.680463Z"
+     "end_time": "2024-03-07T03:57:32.987173Z",
+     "start_time": "2024-03-07T03:57:32.852511Z"
     }
    },
    "outputs": [],
    "source": [
     "rows = []\n",
     "for run in runs:\n",
-    "    for path in glob.glob(\"../../1_NanoStrandSeq/results/demux/trimmed/%s/*.log\" % run):\n",
+    "    for path in sorted(glob.glob(\"../../1_NanoStrandSeq/results/demux/trimmed/%s/*.log\" % run)):\n",
     "        row = []\n",
     "        for line in open(path):\n",
     "            if \"%\" in line:\n",
@@ -56,12 +56,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "9cc6823d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-01-23T10:18:45.725613Z",
-     "start_time": "2024-01-23T10:18:45.662326Z"
+     "end_time": "2024-03-07T03:57:34.258766Z",
+     "start_time": "2024-03-07T03:57:34.235675Z"
     }
    },
    "outputs": [
@@ -101,33 +101,33 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.083271</td>\n",
-       "      <td>0.011731</td>\n",
-       "      <td>0.904773</td>\n",
+       "      <td>0.143132</td>\n",
+       "      <td>0.023558</td>\n",
+       "      <td>0.829037</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.077932</td>\n",
-       "      <td>0.017901</td>\n",
-       "      <td>0.904151</td>\n",
+       "      <td>0.126565</td>\n",
+       "      <td>0.018000</td>\n",
+       "      <td>0.854619</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.075693</td>\n",
-       "      <td>0.020194</td>\n",
-       "      <td>0.904113</td>\n",
+       "      <td>0.142436</td>\n",
+       "      <td>0.030792</td>\n",
+       "      <td>0.825500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.117952</td>\n",
+       "      <td>0.023466</td>\n",
+       "      <td>0.858405</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0.081678</td>\n",
-       "      <td>0.022160</td>\n",
-       "      <td>0.896125</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>0.070878</td>\n",
-       "      <td>0.016988</td>\n",
-       "      <td>0.912106</td>\n",
+       "      <td>0.098415</td>\n",
+       "      <td>0.015189</td>\n",
+       "      <td>0.886372</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -137,33 +137,33 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>510</th>\n",
-       "      <td>0.040698</td>\n",
-       "      <td>0.017911</td>\n",
-       "      <td>0.941386</td>\n",
+       "      <td>0.048994</td>\n",
+       "      <td>0.011953</td>\n",
+       "      <td>0.939042</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>511</th>\n",
-       "      <td>0.044354</td>\n",
-       "      <td>0.052578</td>\n",
-       "      <td>0.903061</td>\n",
+       "      <td>0.048174</td>\n",
+       "      <td>0.017257</td>\n",
+       "      <td>0.934552</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>512</th>\n",
-       "      <td>0.078130</td>\n",
-       "      <td>0.029975</td>\n",
-       "      <td>0.891883</td>\n",
+       "      <td>0.046722</td>\n",
+       "      <td>0.015650</td>\n",
+       "      <td>0.937618</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>513</th>\n",
-       "      <td>0.044017</td>\n",
-       "      <td>0.012058</td>\n",
-       "      <td>0.943925</td>\n",
+       "      <td>0.049746</td>\n",
+       "      <td>0.039739</td>\n",
+       "      <td>0.910491</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>514</th>\n",
-       "      <td>0.043083</td>\n",
-       "      <td>0.018539</td>\n",
-       "      <td>0.938369</td>\n",
+       "      <td>0.046964</td>\n",
+       "      <td>0.013686</td>\n",
+       "      <td>0.939347</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -172,22 +172,22 @@
       ],
       "text/plain": [
        "     NoLinker  IsChimeric      Pass\n",
-       "0    0.083271    0.011731  0.904773\n",
-       "1    0.077932    0.017901  0.904151\n",
-       "2    0.075693    0.020194  0.904113\n",
-       "4    0.081678    0.022160  0.896125\n",
-       "5    0.070878    0.016988  0.912106\n",
+       "0    0.143132    0.023558  0.829037\n",
+       "1    0.126565    0.018000  0.854619\n",
+       "2    0.142436    0.030792  0.825500\n",
+       "3    0.117952    0.023466  0.858405\n",
+       "4    0.098415    0.015189  0.886372\n",
        "..        ...         ...       ...\n",
-       "510  0.040698    0.017911  0.941386\n",
-       "511  0.044354    0.052578  0.903061\n",
-       "512  0.078130    0.029975  0.891883\n",
-       "513  0.044017    0.012058  0.943925\n",
-       "514  0.043083    0.018539  0.938369\n",
+       "510  0.048994    0.011953  0.939042\n",
+       "511  0.048174    0.017257  0.934552\n",
+       "512  0.046722    0.015650  0.937618\n",
+       "513  0.049746    0.039739  0.910491\n",
+       "514  0.046964    0.013686  0.939347\n",
        "\n",
        "[473 rows x 3 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,12 +203,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "c2e85c35",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-01-23T10:18:47.117208Z",
-     "start_time": "2024-01-23T10:18:46.751113Z"
+     "end_time": "2024-03-07T03:57:47.453856Z",
+     "start_time": "2024-03-07T03:57:47.071698Z"
     }
    },
    "outputs": [
@@ -240,14 +240,6 @@
     "plt.tight_layout()\n",
     "plt.savefig(\"figures/trimming_summary.pdf\", dpi=300)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4f67a36e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
