--- a/0_PlotFigures/03_inversions/03_inversion_properties.ipynb
+++ b/0_PlotFigures/03_inversions/03_inversion_properties.ipynb
@@ -207,8 +207,7 @@
     "ExecuteTime": {
      "end_time": "2023-10-13T04:34:07.707031Z",
      "start_time": "2023-10-13T04:34:07.685383Z"
-    },
-    "scrolled": true
+    }
    },
    "outputs": [
     {
@@ -576,71 +575,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "id": "bcbb6516",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-11-03T09:18:03.968281Z",
-     "start_time": "2023-11-03T09:18:03.957916Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# import pyBigWig\n",
-    "\n",
-    "# def worker(f_bw, chrom, step, min_coverage, max_coverage):\n",
-    "#     regions = []\n",
-    "    \n",
-    "#     with pyBigWig.open(f_bw) as f:\n",
-    "#         length = f.chroms()[chrom]\n",
-    "        \n",
-    "#         step1 = step * 1000\n",
-    "#         for start1 in range(0, length, step1):\n",
-    "#             end1 = min(start1 + step1, length)\n",
-    "#             covs = f.values(chrom, start1, end1)\n",
-    "            \n",
-    "#             for start2 in range(start1, end1, step):\n",
-    "#                 end2 = min(start2 + step, end1)\n",
-    "#                 vs = np.nan_to_num(covs[start2 - start1:end2 - start1])\n",
-    "#                 mean = np.mean(vs)\n",
-    "#                 if mean < min_coverage or mean > max_coverage:\n",
-    "#                     if len(regions) == 0:\n",
-    "#                         regions.append([chrom, start2, end2])\n",
-    "#                     else:\n",
-    "#                         if start2 <= regions[-1][2]:\n",
-    "#                             regions[-1][2] = end2\n",
-    "#                         else:\n",
-    "#                             regions.append([chrom, start2, end2])\n",
-    "                            \n",
-    "#     return regions\n",
-    "\n",
-    "\n",
-    "# def scan_extreme_coverage_regions(f_bw, f_bed, threads=1, min_coverage=15, max_coverage=80):\n",
-    "#     array = []\n",
-    "#     pool = mp.Pool(threads)\n",
-    "#     with pyBigWig.open(f_bw) as f:\n",
-    "#         for chrom in f.chroms():\n",
-    "#             args = (f_bw, chrom, 100, min_coverage, max_coverage)\n",
-    "#             array.append(pool.apply_async(worker, args))\n",
-    "#     pool.close()\n",
-    "#     pool.join()\n",
-    "\n",
-    "#     regions = []\n",
-    "#     for r in array:\n",
-    "#         regions.extend(r.get())\n",
-    "#     regions.sort()\n",
-    "    \n",
-    "#     with open(f_bed, \"w+\") as fw:\n",
-    "#         for r in regions:\n",
-    "#             fw.write(\"\\t\".join(map(str, r)) + \"\\n\")\n",
-    "            \n",
-    "# f_bw = \"../../6_nss-pseudobulk-analysis/results/bw/PacBio.full.bw\"\n",
-    "# f_bed = \"results/PacBio.full.coverage_lt_0_gt_80.bed\"\n",
-    "# scan_extreme_coverage_regions(f_bw, f_bed, 24, 0, 80)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 63,
    "id": "2cde105c",
    "metadata": {
@@ -698,8 +632,7 @@
     "ExecuteTime": {
      "end_time": "2023-11-03T09:18:08.006929Z",
      "start_time": "2023-11-03T09:18:07.976836Z"
-    },
-    "scrolled": true
+    }
    },
    "outputs": [
     {
@@ -792,7 +725,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -806,7 +739,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.15"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
