--- a/1_NanoStrandSeq/nb_2_cellqc.ipynb
+++ b/1_NanoStrandSeq/nb_2_cellqc.ipynb
@@ -2,12 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "5ab2b050",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-03-05T04:37:58.751358Z",
      "start_time": "2024-03-05T04:37:58.550347Z"
+    },
+    "execution": {
+     "iopub.execute_input": "2024-04-09T07:36:58.223066Z",
+     "iopub.status.busy": "2024-04-09T07:36:58.222686Z",
+     "iopub.status.idle": "2024-04-09T07:37:10.743287Z",
+     "shell.execute_reply": "2024-04-09T07:37:10.742805Z",
+     "shell.execute_reply.started": "2024-04-09T07:36:58.223044Z"
     }
    },
    "outputs": [],
@@ -15,14 +22,6 @@
     "import os\n",
     "import numpy as np\n",
     "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "67f0df32",
-   "metadata": {},
-   "source": [
-    "# Report summary"
    ]
   },
   {
@@ -265,21 +264,16 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "026e0ffe",
-   "metadata": {},
-   "source": [
-    "## 1. HG001"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "430b382f",
+   "execution_count": 70,
+   "id": "71e0fcd3-87c1-4fb4-9e83-6cb2dd0186f1",
    "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-01-25T13:07:56.544340Z",
-     "start_time": "2024-01-25T13:07:55.597025Z"
+    "execution": {
+     "iopub.execute_input": "2024-04-09T08:03:25.414701Z",
+     "iopub.status.busy": "2024-04-09T08:03:25.412460Z",
+     "iopub.status.idle": "2024-04-09T08:03:26.730655Z",
+     "shell.execute_reply": "2024-04-09T08:03:26.730199Z",
+     "shell.execute_reply.started": "2024-04-09T08:03:25.414680Z"
     }
    },
    "outputs": [
@@ -287,88 +281,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Passed QC cells: 364\n"
+      "Passed QC cells of HG001: 364\n",
+      "Passed QC cells of B6D2F1: 206\n"
      ]
     }
    ],
    "source": [
-    "d = pd.read_excel(\"data/NanoStrandSeq_Summary_20240301.xlsx\")\n",
-    "\n",
-    "runs= [\n",
-    "    \"20220418_S5CSTreat\",\n",
-    "    \"20220430_S5Merged\", \n",
-    "    \"20220610_Treat\", \n",
-    "    \"20220708_GM12878\", \n",
-    "    \"20220708_GM12878R2\", \n",
-    "    \"20220817_HG001\", \n",
-    "    \"20220915_P1\", \n",
-    "    \"20220916_P1\", \n",
-    "    \"20220916_P2\"]\n",
-    "\n",
-    "control_cells = [\n",
-    "    \"20220418_S5CSTreat.sc001\",\n",
-    "    \"20220418_S5CSTreat.sc002\",\n",
-    "    \"20220418_S5CSTreat.sc003\",\n",
-    "    \"20220418_S5CSTreat.sc004\",\n",
-    "    \"20220418_S5CSTreat.sc005\",\n",
-    "    \"20220418_S5CSTreat.sc006\",\n",
-    "    \"20220418_S5CSTreat.sc007\",\n",
-    "    \"20220418_S5CSTreat.sc008\"]\n",
-    "\n",
-    "d = d[[run in runs for run in d[\"Run\"]]]\n",
-    "d = d[[cell not in control_cells for cell in d[\"Cell\"]]]\n",
-    "d = d[(d[\"UniqReads\"] >= 80000) & (d[\"Background\"] < 0.05)]\n",
-    "d.to_excel(\"data/NanoStrandSeq_HG001_QC_Pass.xlsx\", index=False)\n",
-    "print(\"Passed QC cells:\", len(d))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "42da6fe9",
-   "metadata": {},
-   "source": [
-    "## 2. C57/DBA"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "2a0d5f57",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-01-25T13:08:00.130318Z",
-     "start_time": "2024-01-25T13:07:59.454076Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Passed QC cells: 206\n"
-     ]
-    }
-   ],
-   "source": [
-    "d = pd.read_excel(\"data/NanoStrandSeq_Summary_20240301.xlsx\")\n",
-    "\n",
-    "runs= [\n",
-    "    \"20220524_MEF\", \n",
-    "    \"20220929_P1\", \n",
-    "    \"20220929_P2\", \n",
-    "    \"20221005_MEF\", \n",
-    "    \"20221006_MEF\"]\n",
-    "\n",
-    "d = d[[run in runs for run in d[\"Run\"]]]\n",
-    "d = d[(d[\"UniqReads\"] >= 70000) & (d[\"Background\"] < 0.05)]\n",
-    "d.to_excel(\"data/NanoStrandSeq_C57DBA_QC_Pass.xlsx\", index=False)\n",
-    "print(\"Passed QC cells:\", len(d))"
+    "for strain in [\"HG001\", \"B6D2F1\"]:\n",
+    "    if strain == \"HG001\":\n",
+    "        min_reads = 80000\n",
+    "    else:\n",
+    "        min_reads = 70000\n",
+    "    max_bg = 0.05\n",
+    "    d = pd.read_csv(\"reports/NanoStrandSeq_Summary_20240301.csv\")\n",
+    "    d = d[(d[\"Strain\"] == strain) & (d[\"Remark\"] != \"Control\")]\n",
+    "    d = d[(d[\"UniqReads\"] >= min_reads) & (d[\"Background\"] < max_bg)]\n",
+    "    d.to_csv(\"reports/NanoStrandSeq_%s_QC_Pass.csv\" % strain, index=False)\n",
+    "    print(\"Passed QC cells of %s:\" % strain, len(d))"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -382,7 +317,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.15"
+   "version": "3.10.13"
   },
   "vscode": {
    "interpreter": {
