--- a/0_PlotFigures/01_characteristic/05_quality_control_of_cells.ipynb
+++ b/0_PlotFigures/01_characteristic/05_quality_control_of_cells.ipynb
@@ -300,8 +300,7 @@
     "ExecuteTime": {
      "end_time": "2024-03-07T04:19:46.383706Z",
      "start_time": "2024-03-07T04:19:45.930906Z"
-    },
-    "scrolled": false
+    }
    },
    "outputs": [
     {
@@ -421,7 +420,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -435,7 +434,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.15"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
