--- a/0_PlotFigures/03_inversions/02_make_composite_schema.ipynb
+++ b/0_PlotFigures/03_inversions/02_make_composite_schema.ipynb
@@ -2,12 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "2bec582c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-29T04:52:13.433901Z",
      "start_time": "2024-01-29T04:52:13.428855Z"
+    },
+    "execution": {
+     "iopub.execute_input": "2024-04-09T01:41:39.688294Z",
+     "iopub.status.busy": "2024-04-09T01:41:39.687561Z",
+     "iopub.status.idle": "2024-04-09T01:42:09.635711Z",
+     "shell.execute_reply": "2024-04-09T01:42:09.635214Z",
+     "shell.execute_reply.started": "2024-04-09T01:41:39.688267Z"
     }
    },
    "outputs": [],
@@ -34,12 +41,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "9aa084ac",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-01-29T04:52:14.189482Z",
      "start_time": "2024-01-29T04:52:14.183994Z"
+    },
+    "execution": {
+     "iopub.execute_input": "2024-04-09T01:42:09.636865Z",
+     "iopub.status.busy": "2024-04-09T01:42:09.636573Z",
+     "iopub.status.idle": "2024-04-09T01:42:09.662900Z",
+     "shell.execute_reply": "2024-04-09T01:42:09.662487Z",
+     "shell.execute_reply.started": "2024-04-09T01:42:09.636846Z"
     },
     "hidden": true
    },
@@ -431,7 +445,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -445,7 +459,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.15"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
