--- a/0_PlotFigures/03_inversions/04_inversion_boundary.ipynb
+++ b/0_PlotFigures/03_inversions/04_inversion_boundary.ipynb
@@ -175,8 +175,7 @@
     },
     "code_folding": [
      0
-    ],
-    "scrolled": false
+    ]
    },
    "outputs": [
     {
@@ -709,7 +708,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -723,7 +722,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.15"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
