--- a/0_PlotFigures/03_inversions/05_benchmark_inv.ipynb
+++ b/0_PlotFigures/03_inversions/05_benchmark_inv.ipynb
@@ -244,8 +244,7 @@
      "end_time": "2023-11-15T05:11:00.201353Z",
      "start_time": "2023-11-15T05:11:00.147721Z"
     },
-    "hidden": true,
-    "scrolled": false
+    "hidden": true
    },
    "outputs": [
     {
@@ -1187,8 +1186,7 @@
     "ExecuteTime": {
      "end_time": "2023-11-25T08:42:20.457466Z",
      "start_time": "2023-11-25T08:42:20.343786Z"
-    },
-    "scrolled": false
+    }
    },
    "outputs": [
     {
@@ -1337,8 +1335,7 @@
     "ExecuteTime": {
      "end_time": "2023-11-15T14:31:33.930245Z",
      "start_time": "2023-11-15T14:31:32.920097Z"
-    },
-    "scrolled": false
+    }
    },
    "outputs": [
     {
@@ -1412,7 +1409,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1426,7 +1423,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.15"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
