--- a/0_PlotFigures/05_phasing_sv/01_summary_of_phased_svs.ipynb
+++ b/0_PlotFigures/05_phasing_sv/01_summary_of_phased_svs.ipynb
@@ -48,7 +48,7 @@
     "ncells = [50, 75, 100, 125, 150, 200, 250, 300, 350]\n",
     "\n",
     "for ncell in ncells:\n",
-    "    path1 = \"../../A1_NanoStrandseqAssembly/results/HG001_Cell_%d/sv/quantify_lite.tsv\" % ncell\n",
+    "    path1 = \"../../4_NanoStrandSeq_Phasing/results/HG001_Cell_%d/sv/quantify_lite.tsv\" % ncell\n",
     "    path2 = \"results/quant_phased_svs.HG001_Cell_%d.tsv\" % ncell\n",
     "    \n",
     "    dat = pd.read_csv(path1, sep=\"\\t\")\n",
@@ -791,9 +791,9 @@
     "# load SNPs\n",
     "\n",
     "data_snps = dict()\n",
-    "data_snps[\"HG001_NSS_hetSNPs\"] = load_het_snps(\"../../A1_NanoStrandseqAssembly/results/HG001_Cell_350/round2/snvs.vcf.gz\")\n",
+    "data_snps[\"HG001_NSS_hetSNPs\"] = load_het_snps(\"../../4_NanoStrandSeq_Phasing/results/HG001_Cell_350/round2/snvs.vcf.gz\")\n",
     "data_snps[\"HG001_GIAB_hetSNPs\"] = load_het_snps(\"../../GRCh38-HG001-Variant-Calls/results/benchmark_autosomal_v4.2.1_chrx_v3.3.2.vcf.gz\")\n",
-    "data_snps[\"HG001_Pacbio_hetSNPs\"] = load_het_snps(\"../../6_nss-pseudobulk-analysis/results/snvs/concated/nanocaller/PacBio.full.vcf.gz\")\n",
+    "data_snps[\"HG001_Pacbio_hetSNPs\"] = load_het_snps(\"../../3_NanoStrandSeq_PseudoBulk/results/snvs/concated/nanocaller/PacBio.full.vcf.gz\")\n",
     "data_snps[\"HG002_GIAB_hetSNPs\"] = load_het_snps(\"../../GIAB/HG002/HG002_GRCh38_1_22_v4.2.1_benchmark_hifiasm_v11_phasetransfer.corrected.vcf.gz\")"
    ]
   },
@@ -1264,8 +1264,7 @@
     "ExecuteTime": {
      "end_time": "2023-11-27T08:10:11.074274Z",
      "start_time": "2023-11-27T08:10:10.820980Z"
-    },
-    "scrolled": false
+    }
    },
    "outputs": [
     {
@@ -1362,7 +1361,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1376,7 +1375,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.15"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
