--- a/0_PlotFigures/05_phasing_sv/02_validate_phased_sv.ipynb
+++ b/0_PlotFigures/05_phasing_sv/02_validate_phased_sv.ipynb
@@ -187,7 +187,7 @@
     "loader2 = ShiftLoader(snps2) # GIAB\n",
     "rows = []\n",
     "\n",
-    "with pysam.FastaFile(\"/home/chenzonggui/species/homo_sapiens/GRCh38.p13/GRCh38.canonical.genome.fa\") as fasta:\n",
+    "with pysam.FastaFile(\"/lustre/grp/tfclab/chenzg/species/homo_sapiens/GRCh38.p13/GRCh38.canonical.genome.fa\") as fasta:\n",
     "    for sv in svs:\n",
     "        closest_distance1, closest_snp1 = get_closest_snp(sv, loader1)\n",
     "        closest_distance2, closest_snp2 = get_closest_snp(sv, loader2)\n",
@@ -514,7 +514,7 @@
      "end_time": "2024-01-30T06:56:58.016582Z",
      "start_time": "2024-01-30T06:56:57.953404Z"
     },
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -1175,8 +1175,7 @@
     "ExecuteTime": {
      "end_time": "2024-01-30T06:56:58.741361Z",
      "start_time": "2024-01-30T06:56:58.720209Z"
-    },
-    "scrolled": false
+    }
    },
    "outputs": [
     {
@@ -1244,7 +1243,8 @@
     "ExecuteTime": {
      "end_time": "2024-01-30T06:57:02.441185Z",
      "start_time": "2024-01-30T06:57:02.372565Z"
-    }
+    },
+    "scrolled": true
    },
    "outputs": [
     {
@@ -1381,7 +1381,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1395,7 +1395,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.15"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
