--- a/0_PlotFigures/05_phasing_sv/03_benchmark_of_sv.ipynb
+++ b/0_PlotFigures/05_phasing_sv/03_benchmark_of_sv.ipynb
@@ -1007,8 +1007,7 @@
     "ExecuteTime": {
      "end_time": "2024-02-05T15:07:52.205023Z",
      "start_time": "2024-02-05T15:07:52.148941Z"
-    },
-    "scrolled": false
+    }
    },
    "outputs": [
     {
@@ -1035,7 +1034,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1049,7 +1048,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.15"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
