--- a/2_StrandSeq/nb_1_summary.ipynb
+++ b/2_StrandSeq/nb_1_summary.ipynb
@@ -2,12 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "5d9a7b2b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-03-07T03:03:18.652711Z",
      "start_time": "2024-03-07T03:03:18.126496Z"
+    },
+    "execution": {
+     "iopub.execute_input": "2024-04-09T08:33:39.901496Z",
+     "iopub.status.busy": "2024-04-09T08:33:39.901078Z",
+     "iopub.status.idle": "2024-04-09T08:33:39.904200Z",
+     "shell.execute_reply": "2024-04-09T08:33:39.903760Z",
+     "shell.execute_reply.started": "2024-04-09T08:33:39.901474Z"
     }
    },
    "outputs": [],
@@ -23,17 +30,24 @@
    "id": "be5725e4",
    "metadata": {},
    "source": [
-    "# Summary"
+    "# Report summary"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "a3a0477a",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-03-07T03:03:18.811223Z",
      "start_time": "2024-03-07T03:03:18.656926Z"
+    },
+    "execution": {
+     "iopub.execute_input": "2024-04-09T08:33:40.580366Z",
+     "iopub.status.busy": "2024-04-09T08:33:40.579833Z",
+     "iopub.status.idle": "2024-04-09T08:33:46.235362Z",
+     "shell.execute_reply": "2024-04-09T08:33:46.234832Z",
+     "shell.execute_reply.started": "2024-04-09T08:33:40.580344Z"
     }
    },
    "outputs": [],
@@ -43,12 +57,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "4ba09c24",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-03-07T03:03:18.875157Z",
      "start_time": "2024-03-07T03:03:18.855048Z"
+    },
+    "execution": {
+     "iopub.execute_input": "2024-04-09T08:33:46.236555Z",
+     "iopub.status.busy": "2024-04-09T08:33:46.236306Z",
+     "iopub.status.idle": "2024-04-09T08:33:47.405218Z",
+     "shell.execute_reply": "2024-04-09T08:33:47.404731Z",
+     "shell.execute_reply.started": "2024-04-09T08:33:46.236536Z"
     }
    },
    "outputs": [],
@@ -69,12 +90,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "c0d996a7",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-03-07T03:05:43.703831Z",
      "start_time": "2024-03-07T03:05:42.246810Z"
+    },
+    "execution": {
+     "iopub.execute_input": "2024-04-09T08:33:47.406049Z",
+     "iopub.status.busy": "2024-04-09T08:33:47.405872Z",
+     "iopub.status.idle": "2024-04-09T08:34:03.600019Z",
+     "shell.execute_reply": "2024-04-09T08:34:03.599452Z",
+     "shell.execute_reply.started": "2024-04-09T08:33:47.406032Z"
     }
    },
    "outputs": [],
@@ -96,12 +124,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "id": "c6d19fac",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-03-07T03:18:13.827321Z",
      "start_time": "2024-03-07T03:18:12.355458Z"
+    },
+    "execution": {
+     "iopub.execute_input": "2024-04-09T08:34:03.601379Z",
+     "iopub.status.busy": "2024-04-09T08:34:03.601118Z",
+     "iopub.status.idle": "2024-04-09T08:34:05.584912Z",
+     "shell.execute_reply": "2024-04-09T08:34:05.584433Z",
+     "shell.execute_reply.started": "2024-04-09T08:34:03.601361Z"
     }
    },
    "outputs": [],
@@ -128,12 +163,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "ceb95440",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-03-07T03:03:26.041249Z",
      "start_time": "2024-03-07T03:03:19.268482Z"
+    },
+    "execution": {
+     "iopub.execute_input": "2024-04-09T08:34:05.585735Z",
+     "iopub.status.busy": "2024-04-09T08:34:05.585549Z",
+     "iopub.status.idle": "2024-04-09T08:34:20.333461Z",
+     "shell.execute_reply": "2024-04-09T08:34:20.332283Z",
+     "shell.execute_reply.started": "2024-04-09T08:34:05.585717Z"
     }
    },
    "outputs": [],
@@ -153,12 +195,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "445248cb",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-03-07T03:03:34.306155Z",
      "start_time": "2024-03-07T03:03:26.044016Z"
+    },
+    "execution": {
+     "iopub.execute_input": "2024-04-09T08:34:20.335971Z",
+     "iopub.status.busy": "2024-04-09T08:34:20.335486Z",
+     "iopub.status.idle": "2024-04-09T08:34:36.362774Z",
+     "shell.execute_reply": "2024-04-09T08:34:36.362011Z",
+     "shell.execute_reply.started": "2024-04-09T08:34:20.335947Z"
     }
    },
    "outputs": [],
@@ -182,12 +231,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "f8a0c095",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-03-07T03:03:41.775232Z",
      "start_time": "2024-03-07T03:03:34.309674Z"
+    },
+    "execution": {
+     "iopub.execute_input": "2024-04-09T08:34:36.364053Z",
+     "iopub.status.busy": "2024-04-09T08:34:36.363751Z",
+     "iopub.status.idle": "2024-04-09T08:34:50.646630Z",
+     "shell.execute_reply": "2024-04-09T08:34:50.645962Z",
+     "shell.execute_reply.started": "2024-04-09T08:34:36.364034Z"
     }
    },
    "outputs": [],
@@ -207,12 +263,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "0a27fd74",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-03-07T03:03:49.111060Z",
      "start_time": "2024-03-07T03:03:41.779531Z"
+    },
+    "execution": {
+     "iopub.execute_input": "2024-04-09T08:34:50.647807Z",
+     "iopub.status.busy": "2024-04-09T08:34:50.647534Z",
+     "iopub.status.idle": "2024-04-09T08:35:06.160661Z",
+     "shell.execute_reply": "2024-04-09T08:35:06.159853Z",
+     "shell.execute_reply.started": "2024-04-09T08:34:50.647786Z"
     }
    },
    "outputs": [],
@@ -232,12 +295,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "c39a568b",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-03-07T03:03:56.255811Z",
      "start_time": "2024-03-07T03:03:49.113828Z"
+    },
+    "execution": {
+     "iopub.execute_input": "2024-04-09T08:35:06.162017Z",
+     "iopub.status.busy": "2024-04-09T08:35:06.161698Z",
+     "iopub.status.idle": "2024-04-09T08:35:21.855474Z",
+     "shell.execute_reply": "2024-04-09T08:35:21.854769Z",
+     "shell.execute_reply.started": "2024-04-09T08:35:06.161997Z"
     }
    },
    "outputs": [],
@@ -257,63 +327,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
    "id": "ebe7fcf8",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2024-03-07T03:18:18.660869Z",
      "start_time": "2024-03-07T03:18:18.020642Z"
+    },
+    "execution": {
+     "iopub.execute_input": "2024-04-09T08:35:21.857327Z",
+     "iopub.status.busy": "2024-04-09T08:35:21.856976Z",
+     "iopub.status.idle": "2024-04-09T08:35:22.347442Z",
+     "shell.execute_reply": "2024-04-09T08:35:22.346757Z",
+     "shell.execute_reply.started": "2024-04-09T08:35:21.857305Z"
     }
    },
    "outputs": [],
    "source": [
-    "dat.to_excel(\"data/StrandSeq_Summary.xlsx\", index=False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e10b04bf",
-   "metadata": {},
-   "source": [
-    "# Quality control"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "id": "92db774f",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-03-07T03:20:26.012697Z",
-     "start_time": "2024-03-07T03:20:25.528519Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "20160928_PRJEB14185_CEU: 94\n",
-      "20210729_PRJNA742746_HG001: 74\n"
-     ]
-    }
-   ],
-   "source": [
-    "d = pd.read_excel(\"data/StrandSeq_Summary.xlsx\")\n",
-    "\n",
-    "tmp = d[(d[\"Run\"] == \"20160928_PRJEB14185_CEU\") & (d[\"UniqReads\"] >= 800000) & (d[\"Background\"] < 0.05)]\n",
-    "print(\"20160928_PRJEB14185_CEU:\", len(tmp))\n",
-    "tmp.to_excel(\"data/StrandSeq_StrandSeq_QC_Pass.xlsx\", index=False)\n",
-    "\n",
-    "tmp = d[(d[\"Run\"] == \"20210729_PRJNA742746_HG001\") & (d[\"UniqReads\"] >= 2000000) & (d[\"Background\"] < 0.05)]\n",
-    "print(\"20210729_PRJNA742746_HG001:\", len(tmp))\n",
-    "tmp.to_excel(\"data/StrandSeq_OPStrandSeq_QC_Pass.xlsx\", index=False)"
+    "! mkdir -p reports\n",
+    "dat.to_csv(\"reports/StrandSeq_Summary.csv\", index=False)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -327,7 +365,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.15"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
